# CMakeList.txt : CMake project for n3u2ographengine.cm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (n3u2ographenginecm "n3u2ographengine.cm.cpp" "n3u2ographengine.cm.h")

# TODO: Add tests and install targets if needed.
